--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -17,12 +17,14 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "strict": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": false,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": false
   },
   "include": ["src"]
 }
